@@ -180,7 +180,13 @@ var CloudCommander, Util, DOM, $;
             },
             
             // define the elements of the menu
-            items: getAllItems(lMenuItems)
+            items: getAllItems(lMenuItems),
+            events:{
+                hide: function(){
+                    var lLayer = DOM.getById('context-menu-layer');
+                    DOM.addOneTimeListener('contextmenu', clickProcessing, lLayer);
+                }
+            }
         };
         
         return lRet;
@@ -259,8 +265,6 @@ var CloudCommander, Util, DOM, $;
                     lLayer.style.cssText = lStyle;
                 
                 KeyBinding.set();
-                
-                //DOM.addListener('contextmenu', clickProcessing, lLayer);
             }
         }
     }
