@@ -130,6 +130,9 @@ time was changed.
 
 * Fixed bug with (fake) deleting file.
 
+* Added ability show context menu on right click
+while menu is showing now.
+
 
 2012.12.12, Version 0.1.8
 
